one bug in BratEntity construtor